--- a/style/style.css
+++ b/style/style.css
@@ -119,7 +119,7 @@ section{
 
 .hire-button{
     margin-top: 2rem;
-    width: 15%;
+    width: 10rem;
     display: flex;
     justify-content: center;
     align-items: center;
