--- a/style/style.css
+++ b/style/style.css
@@ -27,8 +27,8 @@ header{
 .toggle{
     display: flex;
     height: 10%;
-    background: linear-gradient(to right, rgb(245, 61, 147)
-, rgb(255, 0, 140));
+    background: linear-gradient(to right, rgb(243, 45, 95)
+,  rgb(255, 0, 98));
     align-items: center;
     justify-content: center;
 }
@@ -47,7 +47,6 @@ nav{
     overflow: hidden;
     z-index: 99;
     background-color: rgba(43, 43, 43, 0.582);
-    padding: 0 5px;
 }
 nav ul{
     display: flex;
@@ -64,7 +63,6 @@ nav ul li {
     border-radius: 15px;
     justify-content: flex-start;
     cursor: pointer;
-    margin: 5px;
 }
 
 nav ul li a{
@@ -79,9 +77,7 @@ nav ul li a span{
 }
 nav ul li:hover {
     transition: 0.5s;
-    background-color: rgb(20, 20, 20);
 }
-
 @media only screen and (max-width: 480px){
     nav{
         width: 0%;
@@ -118,6 +114,7 @@ section{
     font-family: 'Poppins-ExtraBold';
     letter-spacing: 2px;
     font-weight: 900;
+    width: fit-content;
 }
 
 .hire-button{
@@ -136,8 +133,8 @@ section{
     width: 100%;
     border-radius: 40px;
     height: 100%;
-    background: linear-gradient(to right, rgb(245, 61, 147)
-    , rgb(255, 0, 140));
+    background: linear-gradient(to right, rgb(233, 38, 87)
+    ,  rgb(255, 0, 98));
     transition: .5s;
     padding: 10px;
 }
