--- a/style/style.css
+++ b/style/style.css
@@ -75,8 +75,12 @@ nav ul li a span{
     display: flex;
     margin: 0 20px;
 }
-nav ul li:hover {
-    transition: 0.5s;
+nav ul li a i{
+    transition: .5s;
+}
+
+nav ul li a:hover{
+    color: rgb(255, 0, 98);
 }
 @media only screen and (max-width: 480px){
     nav{
