--- a/style/style.css
+++ b/style/style.css
@@ -91,13 +91,11 @@ nav ul li a:hover{
 main{
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 section{
     color: white;
     display: flex;
     justify-content: center;
-    width: 100%;
     background-color: rgb(22, 22, 22);
     min-height: 100vh;
     padding-left: 5rem;
@@ -151,3 +149,85 @@ background: linear-gradient(to right, rgb(243, 45, 95)
     transition: .5s;
 }
 
+/* MAIN CONTENT*/
+.main-content{
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+/*PROJECT*/
+.projects{
+    display: flex;
+    flex-direction: column;
+}
+.project-title{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+    padding-left: 3rem;
+}
+.project-title h2{
+    font-size: 3rem;
+    color: rgb(255, 0, 98);
+    font-family: 'Poppins-ExtraBold';
+    font-weight: 900;
+    letter-spacing: 2px;
+}
+.project-title p{
+    max-width: 50%;
+}
+.project-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.project-worked{
+    display: inline-flex;
+    flex-direction: column;
+    height: 15rem;
+    width: 23rem;
+    min-width: 20rem;
+    flex-wrap: wrap;
+    position: relative;
+    max-width: 100%;
+    overflow: hidden;
+    
+}
+.project-container{
+    width: 100%;
+    height: 100%;
+}
+.project-container img{
+    width: 100%;
+    height: 100%;
+    transition: .5s;
+    opacity: .4;
+}
+
+.project-container .view-popup{
+    position: absolute;
+    text-align: center;
+    top: 30%;
+    left: 30%;
+    display: flex;
+    align-items: center;
+    height: 7rem;
+    justify-content: center;
+    background-color: rgb(255, 0, 98);
+    padding: 1rem;
+    border-radius: 50%;
+    opacity: 0;
+    transition: .5s;
+    transform: scale(0);
+}
+.project-worked:hover .view-popup{
+    opacity: 1;
+    transition: .5s;
+    transform: scale(1);
+}
+.project-worked:hover .project-container img{
+    transition: .5s;
+    transform: scale(1.5);
+    opacity: 1;
+}
