--- a/style/style.css
+++ b/style/style.css
@@ -139,6 +139,7 @@ background: linear-gradient(to right, rgb(243, 45, 95)
 ,  rgb(255, 0, 98));
     transition: .5s;
     padding: 10px;
+    letter-spacing: 3px;
 }
 .hire-button:hover{
     border: .5px solid rgba(177, 177, 177, 0.911);
@@ -185,14 +186,14 @@ background: linear-gradient(to right, rgb(243, 45, 95)
 .project-worked{
     display: inline-flex;
     flex-direction: column;
-    height: 15rem;
+    height: 20rem;
     width: 23rem;
     min-width: 20rem;
     flex-wrap: wrap;
     position: relative;
     max-width: 100%;
     overflow: hidden;
-    
+    cursor: pointer;
 }
 .project-container{
     width: 100%;
@@ -204,13 +205,18 @@ background: linear-gradient(to right, rgb(243, 45, 95)
     transition: .5s;
     opacity: .4;
 }
-
+.view-popup p{
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
 .project-container .view-popup{
     position: absolute;
     text-align: center;
     top: 30%;
     left: 30%;
     display: flex;
+    max-width: 10rem;
+    flex-wrap: wrap;
     align-items: center;
     height: 7rem;
     justify-content: center;
@@ -221,6 +227,10 @@ background: linear-gradient(to right, rgb(243, 45, 95)
     transition: .5s;
     transform: scale(0);
 }
+.view-popup a{
+    text-decoration: none;
+    color: white;
+}
 .project-worked:hover .view-popup{
     opacity: 1;
     transition: .5s;
@@ -228,6 +238,6 @@ background: linear-gradient(to right, rgb(243, 45, 95)
 }
 .project-worked:hover .project-container img{
     transition: .5s;
-    transform: scale(1.5);
+    transform: scale(1.3);
     opacity: 1;
 }
