--- a/style/style.css
+++ b/style/style.css
@@ -87,6 +87,32 @@ nav ul li a:hover{
         width: 0%;
         overflow: hidden;
     }
+    .profile{
+        align-items: center;
+    }
+    .profile-intro h1{
+        text-align: center;
+    }
+    .profile-intro, .hire-button {
+        margin-left: 0 !important;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    section{
+        padding-left: 0 !important;
+        margin: 0;
+    }
+    .project-title {
+        align-items: center;
+        padding-left: 0 !important;
+    }
+    .projects .project-title p {
+        max-width: 100%;
+        text-align: center;
+        padding: 2rem;
+    }
+    
 }
 main{
     display: flex;
