--- a/style/style.css
+++ b/style/style.css
@@ -137,7 +137,7 @@ section{
     letter-spacing: 3px;
     color: rgb(163, 163, 163);
 }
-.profile-intro h1{
+h1{
     font-size: 5rem;
     font-family: 'Poppins-ExtraBold';
     letter-spacing: 2px;
@@ -194,7 +194,7 @@ background: linear-gradient(to right, rgb(243, 45, 95)
     margin-bottom: 50px;
     padding-left: 3rem;
 }
-.project-title h2{
+h2{
     font-size: 3rem;
     color: rgb(255, 0, 98);
     font-family: 'Poppins-ExtraBold';
@@ -267,4 +267,52 @@ background: linear-gradient(to right, rgb(243, 45, 95)
     transition: .5s;
     transform: scale(1.3);
     opacity: 1;
+}
+
+/* SKILLS */
+.skills{
+    display: flex;
+    flex-direction: column;
+    padding-left: 3rem;
+    align-items: center;
+}
+.skills h2{
+    margin-top: 3rem;
+    margin-left: 0;
+    padding-left: 0;
+}
+.outer-cont{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+.skill-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-top: 2rem;
+    flex-wrap: wrap;
+}
+.skill-desc{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 5rem;
+}
+.skill-desc p{
+    opacity: 0;
+    transition: .5s;
+    text-align: center;
+    display: block;
+}
+
+.contact{
+    height: 200vh;
+}
+.skill-desc .level{
+    color: rgb(88, 88, 88);
+}
+.skill-desc:hover p{
+    opacity: 1;
+    transition: .5s;
 }
