--- a/style/style.css
+++ b/style/style.css
@@ -15,3 +15,44 @@
 html, body{
     font-family: 'Poppins-Regular';
 }
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 4rem;
+    position: fixed;
+    background-color: white;
+    width: 100%;
+}
+header h1{
+    padding-left: 3rem;
+    font-family: 'Poppins-ExtraBold';
+}
+nav{
+    margin-right: 2rem;
+}
+nav ul{
+    display: inline-block;
+}
+nav ul li{
+    display: inline-block;
+    margin: 1rem;
+}
+nav ul li a{
+    text-decoration: none;
+    color: black;
+}
+/* MAIN*/
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.container{
+    display: flex;
+    width: 1200px;
+    height: 700px;
+}
+#Home{
+    height: 700px;
+}
