--- a/style/style.css
+++ b/style/style.css
@@ -26,6 +26,7 @@ header{
     position: fixed;
     background-color: white;
     width: 100%;
+    z-index: 99;
 }
 header h1{
     padding-left: 3rem;
@@ -57,14 +58,104 @@ main{
     height: 700px;
 }
 #Home{
-    height: 700px;
+    height: 500px;
+    max-width: 100%;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     padding-top: 8rem;
+    flex-wrap: wrap;
+    margin: 1px;
 }
 #Home h1{
     font-family: 'Poppins-Bold';
     font-size: 3.8rem;
     padding-left: 3rem;
+}
+.social-media{
+    padding-left: 4rem;
+}
+.social-media .fa{
+    margin: 0 .4rem;
+    font-size: 2rem;
+    color: black;
+    transition: .3s;
+}
+.social-media i:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+}
+.fa-instagram:hover{
+    color: rgb(255, 0, 98);
+    transition: .3s;
+}
+.fa-linkedin-square:hover{
+    transition: .3s;
+    color: rgb(0, 97, 189);
+}
+
+/* ABOUT */
+#About{
+    height: 700px;
+    max-width: 100%;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: row;
+    padding-top: 8rem;
+    margin: 1px;
+}
+.about-container{
+    max-height: 500px;
+  
+}
+#profile-picture{
+    max-width: 350px;
+}
+#profile-picture img{
+    width: 100%;
+    height: auto;
+}
+#profile-desc{
+    width: 50%;
+    padding-left: 2rem;
+    height: 100%;
+    position: relative;
+}
+h2{
+    font-family: 'Poppins-Bold';
+    font-size: 3rem;
+}
+h3{
+    font-size: 1.5rem;
+}
+#profile-desc h2::after{
+    content: 'WEB DEVELOPER';
+    position: absolute;
+    top: 12%;
+    left: 6%;
+    font-size: 1rem;
+    color: rgb(160, 160, 160);
+    letter-spacing: 3px;
+    font-family: 'Poppins-Regular';
+}
+#profile-desc p{
+    max-width: 100%;
+    max-height: 100%;
+    text-align: justify;
+    color: rgb(151, 151, 151);
+    padding-top: 1.5rem;
+}
+#profile-desc .skills p{
+    padding-top: 0;
+}
+.skills{
+    padding-top: 1rem;
+}
+.my-skills{
+    display: flex;
+}
+.my-skills p{
+    opacity: 1;
+    text-align: center;
+    max-width: 1rem;
 }
