--- a/style/style.css
+++ b/style/style.css
@@ -55,22 +55,22 @@ main{
 .container{
     display: flex;
     width: 1200px;
-    height: 700px;
+    min-height: 700px;
 }
 #Home{
-    height: 500px;
     max-width: 100%;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    padding-top: 8rem;
-    flex-wrap: wrap;
+    padding-top: 6rem;
     margin: 1px;
 }
 #Home h1{
     font-family: 'Poppins-Bold';
     font-size: 3.8rem;
     padding-left: 3rem;
+    width: 60%;
+    max-width: 100%;
 }
 .social-media{
     padding-left: 4rem;
@@ -96,7 +96,6 @@ main{
 
 /* ABOUT */
 #About{
-    height: 700px;
     max-width: 100%;
     align-items: flex-start;
     justify-content: center;
@@ -118,8 +117,10 @@ main{
 #profile-desc{
     width: 50%;
     padding-left: 2rem;
-    height: 100%;
+    max-height: 100%;
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 h2{
     font-family: 'Poppins-Bold';
@@ -128,16 +129,7 @@ h2{
 h3{
     font-size: 1.5rem;
 }
-#profile-desc h2::after{
-    content: 'WEB DEVELOPER';
-    position: absolute;
-    top: 12%;
-    left: 6%;
-    font-size: 1rem;
-    color: rgb(160, 160, 160);
-    letter-spacing: 3px;
-    font-family: 'Poppins-Regular';
-}
+
 #profile-desc p{
     max-width: 100%;
     max-height: 100%;
@@ -151,11 +143,39 @@ h3{
 .skills{
     padding-top: 1rem;
 }
-.my-skills{
-    display: flex;
+/* PROJECT */
+#Project{
+    max-width: 100%;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    padding-top: 8rem;
+    margin: 1px;
 }
-.my-skills p{
-    opacity: 1;
+#Project .project-section{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+}
+.project-box{
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 15rem;
+}
+.project-box img{
+    width: 100%;
+    opacity: .5;
+    max-height: 15rem;
+    transition: .2s;
+}
+.project-box p{
     text-align: center;
-    max-width: 1rem;
+}
+.project-box img:hover{
+    opacity: 1;
+    transition: .2s;
+    cursor: pointer;
 }
