--- a/style/style.css
+++ b/style/style.css
@@ -28,6 +28,9 @@ header{
     width: 100%;
     z-index: 99;
 }
+header .fa-bars{
+    display: none;
+}
 header h1{
     padding-left: 3rem;
     font-family: 'Poppins-ExtraBold';
@@ -178,4 +181,91 @@ h3{
     opacity: 1;
     transition: .2s;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 720px){
+    header{
+        justify-content: center;
+        text-align: center;
+        background-color: rgba(65, 65, 65, 0.336);
+    }
+    header h1{
+        display: none;
+    }
+    #Home {
+        max-width: 100%;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        padding-top: 0rem;
+        margin: 1px;
+    }
+    #Home h1{
+        padding: 0;
+        font-size: 2rem;
+        text-align: center;
+        width: 100%;
+    }
+    #Home .social-media{
+        padding-left: 0rem;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    #About{
+        max-width: 100%;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding-top: 8rem;
+        margin: 1px;
+    }
+    .about-container{
+        max-height: 500px;
+      
+    }
+    #profile-picture{
+        max-width: 300px;
+    }
+    #profile-picture img{
+        width: 100%;
+        height: auto;
+    }
+    #profile-desc{
+        width: 80%;
+        padding: 0;
+    }
+    h2{
+        font-family: 'Poppins-Bold';
+        font-size: 1.5rem;
+    }
+    h3{
+        font-size: 1rem;
+    }
+    
+    #profile-desc p{
+        max-width: 100%;
+        max-height: 100%;
+        text-align: justify;
+        color: rgb(151, 151, 151);
+        padding-top: .8rem;
+    }
+    #profile-desc .skills p{
+        padding-top: 0;
+    }
+    .skills{
+        padding-top: 1rem;
+    }
+    #profile-desc h2{
+        text-align: center;
+    }
+    .skill-img{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        max-width: 95%;
+    }
+    #Project p{
+        text-align: center;
+    }
 }
