--- a/style/style.css
+++ b/style/style.css
@@ -239,8 +239,8 @@ footer a{
     #Home {
         max-width: 100%;
         flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-end;
+        align-items: center;
+        justify-content: flex-start;
         padding-top: 7rem;
         margin: 1px;
         height: 100vh;
